test/must_fail/api/must_fail_stack_trace.ngjs
#!/usr/bin/env ngspicejs
// deprecated function
// linter: ngspicejs-lint
"use strict";

// jshint -W117
stack_trace(1);

